--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>un rozon para una bee</title>
+    <title>rosa</title>
     <style>
         * {
             margin: 0;
@@ -502,4 +502,5 @@
         draw();
     </script>
 </body>
+
 </html>
